--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="speak.me.plugin"
     android:versionCode="1"
@@ -6,7 +7,9 @@
     <uses-sdk
         android:minSdkVersion="15"
         android:targetSdkVersion="16" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
 
     <application
         android:allowBackup="true"
@@ -17,10 +20,45 @@
             android:name="speak.me.plugin.SpeakMeReader"
             android:label="speak_me_reader" >
         </service>
+        <service
+            android:name="speak.me.plugin.SpeakMeExamplePlugin"
+            android:exported="true" >
+            <meta-data
+                android:name="speak.me.keywords"
+                android:value="test,example" />
 
-        <service android:name="speak.me.plugin.SpeakMeExamplePlugin"
-                  android:exported="true">
-            <meta-data android:name="speak.me.keywords" android:value="test,example"/>
+            <intent-filter>
+                <action android:name="speak.me.action.PICK_PLUGIN" />
+
+                <category android:name="speak.me.category.PLUGIN_CATEGORY" />
+            </intent-filter>
+        </service>
+
+        <!-- User-specific plugins -->
+        <activity
+            android:name="speak.me.plugin.twitter.AuthorizeActivity"
+            android:enabled="true"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat"
+            >
+            <meta-data
+                android:name="speak.me.keywords"
+                android:value="twitter,settings"/>
+
+            <intent-filter>
+                <action android:name="speak.me.action.PICK_PLUGIN" />
+                <category android:name="speak.me.category.DEFAULT_PLUGIN_CATEGORY" />
+            </intent-filter>
+        </activity>
+        <service
+            android:name="speak.me.plugin.twitter.TwitterTweetService"
+            android:enabled="true"
+            android:exported="true" >
+
+            <meta-data
+                android:name="speak.me.keywords"
+                android:value="twitter,tweet" />
+
             <intent-filter>
                 <action android:name="speak.me.action.PICK_PLUGIN" />
                 <category android:name="speak.me.category.DEFAULT_PLUGIN_CATEGORY" />
