--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,21 @@
                 <category android:name="speak.me.category.DEFAULT_PLUGIN_CATEGORY" />
             </intent-filter>
         </service>
+
+        <service
+            android:name="speak.me.plugin.twitter.TwitterTimelineService"
+            android:enabled="true"
+            android:exported="true" >
+
+            <meta-data
+                android:name="speak.me.keywords"
+                android:value="read,tweets" />
+
+            <intent-filter>
+                <action android:name="speak.me.action.PICK_PLUGIN" />
+                <category android:name="speak.me.category.DEFAULT_PLUGIN_CATEGORY" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
