--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -36,61 +35,65 @@
             android:name="speak.me.plugin.twitter.AuthorizeActivity"
             android:enabled="true"
             android:exported="true"
-            android:theme="@style/Theme.AppCompat"
-            >
+            android:theme="@style/Theme.AppCompat" >
             <meta-data
                 android:name="speak.me.keywords"
-                android:value="twitter,settings"/>
+                android:value="twitter,settings" />
 
             <intent-filter>
                 <action android:name="speak.me.action.PICK_PLUGIN" />
+
                 <category android:name="speak.me.category.DEFAULT_PLUGIN_CATEGORY" />
             </intent-filter>
         </activity>
+
         <service
             android:name="speak.me.plugin.twitter.TwitterTweetService"
             android:enabled="true"
             android:exported="true" >
-
             <meta-data
                 android:name="speak.me.keywords"
                 android:value="twitter,tweet" />
 
             <intent-filter>
                 <action android:name="speak.me.action.PICK_PLUGIN" />
+
                 <category android:name="speak.me.category.DEFAULT_PLUGIN_CATEGORY" />
             </intent-filter>
         </service>
-
         <service
             android:name="speak.me.plugin.twitter.TwitterTimelineService"
             android:enabled="true"
             android:exported="true" >
-
             <meta-data
                 android:name="speak.me.keywords"
                 android:value="read,tweets" />
 
             <intent-filter>
                 <action android:name="speak.me.action.PICK_PLUGIN" />
+
                 <category android:name="speak.me.category.DEFAULT_PLUGIN_CATEGORY" />
             </intent-filter>
         </service>
-
         <service
             android:name="speak.me.plugin.twitter.TwitterUserFinderService"
             android:enabled="true"
             android:exported="true" >
-
             <meta-data
                 android:name="speak.me.keywords"
                 android:value="find,user" />
 
             <intent-filter>
                 <action android:name="speak.me.action.PICK_PLUGIN" />
+
                 <category android:name="speak.me.category.DEFAULT_PLUGIN_CATEGORY" />
             </intent-filter>
         </service>
+
+        <activity
+            android:name=".SpeakMeActivity"
+            android:label="@string/title_activity_speak_me_activity" >
+        </activity>
     </application>
 
 </manifest>
